--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser-dynamic": "^20.1.4",
     "@angular/router": "^20.1.0",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
