--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -4,11 +4,8 @@ NODE_ENV = "production"
 
 [phases.build]
 cmds = [
-    "composer install --optimize-autoloader --no-dev",
-    "php artisan config:cache",
-    "php artisan route:cache", 
-    "php artisan view:cache"
+    "composer install --optimize-autoloader --no-dev"
 ]
 
 [phases.start]
-cmd = "php artisan serve --host=0.0.0.0 --port=${PORT:-8000}"
+cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
