--- a/frontend/nixpacks.toml
+++ b/frontend/nixpacks.toml
@@ -4,12 +4,9 @@ NODE_ENV = "production"
 
 [phases.build]
 cmds = [
-    "npm ci",
-    "npm run build -- --configuration=railway"
+    "npm ci --only=production",
+    "npm run build --configuration=production"
 ]
 
 [phases.start]
-cmd = "npx serve dist/abbrevio-frontend -p ${PORT:-4200}"
-
-[phases.setup]
-nixPkgs = ["nodejs-18_x", "npm"]
+cmd = "npx serve dist/frontend -p $PORT"
