--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,28 +25,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.4",
-    "@angular/cdk": "^20.1.4",
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
-    "@angular/forms": "^20.1.0",
-    "@angular/material": "^20.1.4",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/platform-browser-dynamic": "^20.1.4",
-    "@angular/router": "^20.1.0",
+    "@angular/animations": "18.2.12",
+    "@angular/cdk": "18.2.13",
+    "@angular/common": "18.2.12",
+    "@angular/compiler": "18.2.12",
+    "@angular/core": "18.2.12",
+    "@angular/forms": "18.2.12",
+    "@angular/material": "18.2.13",
+    "@angular/platform-browser": "18.2.12",
+    "@angular/platform-browser-dynamic": "18.2.12",
+    "@angular/router": "18.2.12",
     "rxjs": "~7.8.0",
     "serve": "^14.2.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.4",
-    "@angular/cli": "^20.1.4",
-    "@angular/compiler-cli": "^20.1.0",
+    "@angular-devkit/build-angular": "18.2.12",
+    "@angular/cli": "18.2.12",
+    "@angular/compiler-cli": "18.2.12",
     "@types/jasmine": "~5.1.0",
-    "angular-eslint": "20.1.1",
-    "eslint": "^9.29.0",
+    "angular-eslint": "18.3.1",
+    "eslint": "^8.57.0",
     "grunt": "^1.6.1",
     "grunt-cli": "^1.5.0",
     "grunt-contrib-clean": "^2.0.1",
@@ -60,7 +60,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2",
+    "typescript": "~5.5.4",
     "typescript-eslint": "8.34.1"
   }
 }
