--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Web aplikacija za upravljanje skraćenicama u organizaciji",
   "scripts": {
-    "start": "docker-compose up -d",
-    "stop": "docker-compose down",
-    "build": "docker-compose build",
+    "start": "cd frontend && serve -s dist/frontend -l 4200",
+    "build": "cd frontend && ng build --configuration production",
     "frontend": "cd frontend && npm start",
     "backend": "cd backend && php artisan serve",
     "ml-service": "cd ml-service && python app.py",
@@ -32,8 +31,27 @@
     "url": "https://github.com/your-organization/abbrevio.git"
   },
   "dependencies": {
-    "@angular/common": "^20.2.4",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.2.4"
+    "@angular/animations": "18.2.12",
+    "@angular/cdk": "18.2.13",
+    "@angular/common": "18.2.12",
+    "@angular/compiler": "18.2.12",
+    "@angular/core": "18.2.12",
+    "@angular/forms": "18.2.12",
+    "@angular/material": "18.2.13",
+    "@angular/platform-browser": "18.2.12",
+    "@angular/platform-browser-dynamic": "18.2.12",
+    "@angular/router": "18.2.12",
+    "rxjs": "~7.8.0",
+    "serve": "^14.2.1",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "18.2.12",
+    "@angular/cli": "18.2.12",
+    "@angular/compiler-cli": "18.2.12",
+    "@types/jasmine": "~5.1.0",
+    "angular-eslint": "18.3.1",
+    "eslint": "^8.57.0"
   }
 }
