--- a/package.json
+++ b/package.json
@@ -31,31 +31,31 @@
     "url": "https://github.com/your-organization/abbrevio.git"
   },
   "dependencies": {
-    "@angular/animations": "18.2.12",
-    "@angular/cdk": "18.2.13",
-    "@angular/common": "18.2.12",
-    "@angular/compiler": "18.2.12",
-    "@angular/core": "18.2.12",
-    "@angular/forms": "18.2.12",
-    "@angular/material": "18.2.13",
-    "@angular/platform-browser": "18.2.12",
-    "@angular/platform-browser-dynamic": "18.2.12",
-    "@angular/router": "18.2.12",
+    "@angular/animations": "^20.3.0",
+    "@angular/cdk": "^20.3.0",
+    "@angular/common": "^20.2.4",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.2.4",
+    "@angular/material": "^20.3.0",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/platform-browser-dynamic": "^20.3.0",
+    "@angular/router": "^20.3.0",
     "rxjs": "~7.8.0",
     "serve": "^14.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.12",
-    "@angular/cli": "18.2.12",
-    "@angular/compiler-cli": "18.2.12",
+    "@angular-devkit/build-angular": "^20.3.0",
+    "@angular/cli": "^20.3.0",
+    "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.3.1",
     "eslint": "^8.57.0"
   },
   "engines": {
-    "node": "20.x",
+    "node": "22.x",
     "npm": ">=10.0.0"
   }
 }
