--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,10 +2,18 @@
 [variables]
 NODE_ENV = "production"
 
-[phases.build]
+[phases.install]
 cmds = [
-    "composer install --optimize-autoloader --no-dev"
+    "cp .env.example .env || echo 'Using existing .env'",
+    "composer install --no-interaction --ignore-platform-reqs"
 ]
 
-[phases.start]
+[phases.build]
+cmds = [
+    "php artisan config:clear || true",
+    "php artisan cache:clear || true", 
+    "composer install --optimize-autoloader --no-dev --no-interaction"
+]
+
+[start]
 cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
