--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,19 +1,29 @@
-# Nixpacks configuration for Railway
-# This helps Railway properly detect and build each service
+# Nixpacks configuration for Railway Laravel Backend
+# This helps Railway properly detect and build the Laravel service
 
 [variables]
 NODE_ENV = "production"
 NIXPACKS_NO_CACHE = "true"
 
-# Backend service (Laravel)
+# Laravel Backend Configuration
 [phases.setup]
 dependsOn = []
 
 [phases.install]
 dependsOn = ["setup"]
+cmds = [
+    "composer install --no-dev --optimize-autoloader",
+    "mkdir -p bootstrap/cache storage/app storage/framework storage/framework/cache storage/framework/sessions storage/framework/testing storage/framework/views storage/logs",
+    "chmod -R 775 storage bootstrap/cache"
+]
 
 [phases.build]  
 dependsOn = ["install"]
+cmds = [
+    "php artisan config:cache",
+    "php artisan route:cache",
+    "php artisan view:cache"
+]
 
 [phases.start]
 dependsOn = ["build"]
