Fix Laravel cache issues - clear all caches during deployment

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -20,9 +20,10 @@ cmds = [
 [phases.build]  
 dependsOn = ["install"]
 cmds = [
-    "php artisan config:cache",
-    "php artisan route:cache",
-    "php artisan view:cache"
+    "php artisan config:clear",
+    "php artisan cache:clear",
+    "php artisan route:clear",
+    "php artisan view:clear"
 ]
 
 [phases.start]
