fix: Switch to Apache and add PHP test file

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use official PHP image with Apache
-FROM php:8.2-cli
+FROM php:8.2-apache
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Set working directory
-WORKDIR /var/www
+WORKDIR /var/www/html
 
 # Copy composer files
 COPY composer.json composer.lock ./
@@ -27,27 +27,31 @@ RUN composer install --no-dev --optimize-autoloader --no-scripts
 COPY . .
 
 # Create necessary directories and set proper permissions
-RUN mkdir -p /var/www/storage/logs \
-    && mkdir -p /var/www/storage/framework/cache \
-    && mkdir -p /var/www/storage/framework/sessions \
-    && mkdir -p /var/www/storage/framework/views \
-    && mkdir -p /var/www/bootstrap/cache \
-    && chown -R www-data:www-data /var/www \
-    && chmod -R 755 /var/www/storage \
-    && chmod -R 755 /var/www/bootstrap/cache
+RUN mkdir -p /var/www/html/storage/logs \
+    && mkdir -p /var/www/html/storage/framework/cache \
+    && mkdir -p /var/www/html/storage/framework/sessions \
+    && mkdir -p /var/www/html/storage/framework/views \
+    && mkdir -p /var/www/html/bootstrap/cache \
+    && chown -R www-data:www-data /var/www/html \
+    && chmod -R 755 /var/www/html/storage \
+    && chmod -R 755 /var/www/html/bootstrap/cache
+
+# Enable Apache mod_rewrite for Laravel
+RUN a2enmod rewrite
 
 # Generate application key and cache config (without migrations yet)
 RUN php artisan config:cache && \
     php artisan route:cache
 
-# Expose port
-EXPOSE 8000
+# Expose port 80 (Apache default)
+EXPOSE 80
 
-# Create startup script
+# Create startup script with migrations
 RUN echo '#!/bin/bash' > /start.sh && \
+    echo 'cd /var/www/html' >> /start.sh && \
     echo 'php artisan migrate --force' >> /start.sh && \
-    echo 'php artisan serve --host=0.0.0.0 --port=$PORT' >> /start.sh && \
+    echo 'apache2-foreground' >> /start.sh && \
     chmod +x /start.sh
 
-# Start with migrations then server
+# Start with migrations then Apache
 CMD ["/start.sh"]
