--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -50,9 +50,13 @@ RUN php artisan config:cache && \
 # Expose port 80 (Apache default)
 EXPOSE 80
 
-# Create startup script with migrations
+# Create startup script with cache clearing and migrations
 RUN echo '#!/bin/bash' > /start.sh && \
     echo 'cd /var/www/html' >> /start.sh && \
+    echo 'php artisan config:clear' >> /start.sh && \
+    echo 'php artisan cache:clear' >> /start.sh && \
+    echo 'php artisan route:clear' >> /start.sh && \
+    echo 'php artisan view:clear' >> /start.sh && \
     echo 'php artisan migrate --force' >> /start.sh && \
     echo 'apache2-foreground' >> /start.sh && \
     chmod +x /start.sh
